# lambda-calculus

./: LICENSE  README.md  lambda-calculus.cabal
app/: Main.hs
src/Data/: Term.hs
