name:                lambda-calculus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ktsn/lambda-calculus#readme
license:             BSD3
license-file:        LICENSE
author:              katashin
maintainer:          ktsn55@gmail.com
copyright:           value
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Term
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lambda-calculus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda-calculus
  default-language:    Haskell2010

test-suite lambda-calculus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda-calculus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ktsn/lambda-calculus
